# squaregolf-connector

./: .gitignore  README.md
.github/workflows/: release.yml
frontend/: index.html  main.js  styles.css
scripts/: build-macos-app.sh  build-windows-app.sh  emulate-connector.mjs  emulate-square-lm.mjs  test-frontend-ui.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  config.rs  lib.rs  main.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/protocol/: commands.rs  parser.rs
src-tauri/src/device/: runtime.rs
src-tauri/src/simulator/: client.rs  mod.rs  open_connect.rs  runtime.rs
src-tauri/src/squarelaunch/: discovery.rs  mod.rs  protocol.rs  runtime.rs
src-tauri/tests/: api_contract.rs  config_contract.rs  protocol_commands_contract.rs  protocol_parser_contract.rs  simulator_payload_contract.rs  simulator_runtime_contract.rs  simulator_tcp_contract.rs  squarelaunch_protocol_contract.rs
