[package]
name = "squaregolf-connector"
version = "0.3.0-alpha.0"
description = "Unofficial SquareGolf connector with Tauri UI and OpenAPI server"
authors = ["SquareGolf Connector contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77"
default-run = "squaregolf-connector"

[lib]
name = "squaregolf_connector"
path = "src/lib.rs"

[[bin]]
name = "squaregolf-connector"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
alloc-stdlib = "=0.2.2"
axum = { version = "0.8", features = ["ws"] }
btleplug = "0.12"
brotli = "=8.0.2"
brotli-decompressor = "=5.0.0"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.27"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
uuid = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
